# AAL

./: Alghoritms.cpp  Alghoritms.h  Algorithms.cpp  Algorithms.h  CMakeLists.txt  Dokumentacja.odt  Gen.cpp  Generator.cpp  Generator.h  InputOutput.cpp  InputOutput.h  README.md  README.md.odt  README.odt  Worker.cpp  Worker.h  cxxopts.hpp  main.cpp  project.config  tests.sh
data/: data.txt
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
tests/: WorkerTest.cc
